--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Email Address</h2>
-            <h3>srgujar@wpi.edu</h3>
+            <!-- <h3>srgujar@wpi.edu</h3> -->
             <h3>sanketgujar95@gmail.com</h3>
             </div>
         </div>
@@ -54,13 +54,13 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Mobile Number</h2>
-            <h3> 774 253 7996 </h3>
+            <h3> 669 888 5707 </h3>
             </div>
         </div>
       </div>
     </section>
 
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
